2009-07-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.ExtractMethod/VariableLookupVisitor.cs:
	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodRefactoring.cs:
	  Worked on extract method.

2009-07-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.DeclareLocal/DeclareLocalCodeGenerator.cs:
	  Fixing generic type declarations.

2009-07-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.DeclareLocal/DeclareLocalCodeGenerator.cs:
	  declare local variable no longer shows up in item context
	  menu.

2009-07-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.DeclareLocal/DeclareLocalCodeGenerator.cs:
	  Improved local variable code generator.

2009-07-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.IntegrateTemporaryVariable/IntegrateTemporaryVariableRefactoring.cs:
	  Checked in changes from andrea.

2009-07-09  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Refactoring.csproj:
	* MonoDevelop.Refactoring.addin.xml:
	* MonoDevelop.Refactoring/RefactoryCommands.cs:
	* MonoDevelop.Refactoring/RefactoringOperation.cs:
	* MonoDevelop.Refactoring/INRefactoryASTProvider.cs:
	* MonoDevelop.Refactoring.DeclareLocal/DeclareLocalHandler.cs:
	* MonoDevelop.Refactoring.CreateMethod/CreateMethodCodeGenerator.cs:
	* MonoDevelop.Refactoring.DeclareLocal/DeclareLocalCodeGenerator.cs:
	  Added declare local code generator.

2009-07-09  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Refactoring.csproj:
	* MonoDevelop.Refactoring.DeclareLocal:
	* MonoDevelop.Refactoring/RefactoryCommands.cs:
	* MonoDevelop.Refactoring/RefactoringOperation.cs:
	* MonoDevelop.Refactoring.CreateMethod/CreateMethodCodeGenerator.cs:
	* MonoDevelop.Refactoring.DeclareLocal/DeclareLocalCodeGenerator.cs:
	  Worked on refactoring.

2009-07-08  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.Refactoring.csproj: