@@ -1,5 +1,11 @@
 2009-07-09  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodRefactoring.cs:
+	  Handled the extract method case where only one variable is
+	  changed (use return instead of ref params).
+
+2009-07-09  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.Refactoring.ExtractMethod/VariableLookupVisitor.cs:
 	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodRefactoring.cs:
 	  Worked on extract method.
